--- a/finance-test-task-main/client/src/styles/Yield.module.css
+++ b/finance-test-task-main/client/src/styles/Yield.module.css
@@ -1,14 +1,14 @@
 
 .yieldGreen {
     
-    width: 11%;
+    width: 12%;
     color: #137333;
-    background-color: #e6f4ea;
+    background-color: #bde7c9;
 }
 
 .yieldRed {
 
-    width: 11%;
-    background: #fce8e6;
+    width: 12%;
+    background: #f1d5d3;
     color: #c5221f;
 }
